--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -3,14 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>me.math3ussdl</groupId>
+        <artifactId>palindromos-hugomatheus</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 
-    <groupId>me.math3ussdl</groupId>
-    <artifactId>palindromos-hugomatheus</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <modules>
-        <module>domain</module>
-    </modules>
+    <artifactId>domain</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
