--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,17 @@
     <artifactId>palindromos-hugomatheus</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
     <modules>
         <module>domain</module>
     </modules>
+
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.3</version>
+        <relativePath />
+    </parent>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
