chore: add api layer

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>domain</module>
         <module>application</module>
         <module>infrastructure</module>
+        <module>api</module>
     </modules>
 
     <build>
