--- a/api/pom.xml
+++ b/api/pom.xml
@@ -19,6 +19,18 @@
         </dependency>
 
         <dependency>
+            <groupId>me.math3ussdl</groupId>
+            <artifactId>application</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>me.math3ussdl</groupId>
+            <artifactId>infrastructure</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
